# CSC3002Project

./: Assembler_not_finish.cpp  CMakeLists.txt  README.md  STYLE_GUIDE.md  branch_operator.txt  preparation_for_CSC3002.md
src/: Assembler.cpp  simulator.cpp
